# clipd

./: Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: build.yml
src/: error.rs  lib.rs  main.rs
src/data/: cmd.rs  constant.rs  icon.rs  mod.rs
src/fmt/: ascii.rs  mod.rs  unicode.rs
src/os/: mod.rs  oal.rs
src/os/linux/: clipboard.rs  mod.rs  service.rs
src/os/macos/: clipboard.rs  fmt.rs  mod.rs  service.rs
src/os/windows/: controller.rs  daemon.rs  error.rs  fmt.rs  icon.rs  mem.rs  mod.rs  mutex.rs  pipe.rs  security.rs  user.rs  window.rs
src/util/: logger.rs
