[package]
name = "clipd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-service = "0.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.7.1"
x11rb = { version = "0.10.0", features = ["xfixes"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc_id = "0.1.1"
objc-foundation = "0.1.1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "local-time",
] }
time = { version = "0.3.20", features = ["local-offset"] }
once_cell = "1.17.1"
ctrlc = "3.2.5"
bitflags = "2.0.1"
scopeguard = "1.1.0"
sysinfo = "0.28.3"
sys-locale = "0.2.4"

[build-dependencies]
chrono = "0.4.24"
cmd_lib = "1.3.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
